Opened 14 years ago
Closed 14 years ago
#7893 closed bug (fixed)
[app_server] drawing glitches when resizing stacked windows
Reported by: | diver | Owned by: | czeidler |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Add-Ons/Decorators/Default | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is hrev42532, gcc2hybrid. glitches
Stacking Tracker window with Terminal window and resizing Tracker window to it's minimum shows Terminal window behind.
Attachments (1)
Change History (2)
by , 14 years ago
comment:1 by , 14 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Nice catch fixed in hrev42537 thanks!