Check size limit of all stacked windows when resizing. Fixes #7893 thanks to diver (again).

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@42537 a95241bf-73f2-0310-859d-f6bbb57e9c96